--- a/src/components/css/checkout.css
+++ b/src/components/css/checkout.css
@@ -1,88 +1,3 @@
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 80px;
-    color: white;
-    background-color: white;
-    text-align: center;
-}
-
-.wrapper {
-    max-width: 100%;
-    max-height: 100%;
-    object-position: center;
-    object-fit: cover;
-}
-
-.tablenumber {
-    font-size: 20px;
-    opacity: .5;
-    display: inline;
-    position: relative;
-    float: right;
-    margin-right: 0;
-}
-
-.restaurantName {
-    font-size: 25px;
-    display: inline;
-}
-
-.headerdiv {
-    border-bottom-width: 1px; 
-    border-bottom-style: solid;
-    border-bottom-color: black;
-    margin-top: 0;
-    line-height: 50px;
-}
-
-.basketspan {
-    margin-top: 5px;
-    margin-right: 5px;
-    font-size: 20px;
-    display: inline-block;
-    position: center;
-}
-
-.basketButton {
-    height: 60px;
-    width: 360px;
-    border: #52a5ff;
-    background-color: #52a5ff;
-    font-weight: 700;
-    font-size: 18px;
-    margin-left: 27px;
-    margin-top: 10px;
-}
-
-.cartbasket {
-    display: inline;
-    height: 45px; 
-    width: 45px;   
-    margin-left: 15px;
-    margin-bottom: 0px;
-    opacity: .7;
-    color: white;
-    float: left;
-}
-
-.addbut {
-    float: right;
-    background-color: #52a5ff;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    height: 50px;
-    width: 50px;
-}
-
-.addspan {
-    font-size: 20px;
-    font-weight: bold;
-}
-
 .checkoutimg {
     width: 100%;
     height: 100%;
@@ -143,16 +58,16 @@
     height: 40px;
 }
 
-.cartItemPlus {
+.cartItemPlus, .cartItemPlus:hover, .cartItemPlus:active {
     width: 100%;
     height: 100%;
 }
 
-.cartImagePlus {
+.cartImagePlus, .cartImagePlus:hover, .cartImagePlus:active {
     background-color: black;
 }
 
-.cartImageMinus {
+.cartImageMinus, .cartImageMinus:hover, .cartImageMinus:active {
     background-color: red;
     border: red
 }
@@ -168,7 +83,7 @@
     float: right;   
 }
 
-.clearAllButton {
+.clearAllButton, .clearAllButton:hover, .clearAllButton:active {
     float: right;
     margin-right: 15px;
     margin-top: 15px;
@@ -198,7 +113,7 @@
     height: 100%;
 }
 
-.cartImageRemove {
+.cartImageRemove, .cartImageRemove:hover, .cartImageRemove:active {
     background-color: #df0024;
     border: #df0024;
 }
@@ -206,7 +121,7 @@
 .billing {
     position: sticky;
     width: 100%;
-    bottom: 80px;
+    bottom: 50px;
 }
 
 .billCount {
@@ -236,4 +151,31 @@
     float: right;
     font-size: 23px;
     font-weight: 500;
+}
+
+.checkoutFooter {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 75px;
+    color: white;
+    background-color: #303030;
+    text-align: center;
+}
+
+.checkoutBut, .checkoutBut:hover, .checkoutBut:active {
+    width: 90%;
+    height: 50px;
+    margin-left: 10px;
+    margin-top: 12px;
+    color: white;
+    background-color: #52a5ff;
+    border: 1px outset #52a5ff;
+    font-weight: bold;
+}
+
+.checkoutPrice {
+    font-size: 20px;
+    text-align: center;
 }
