--- a/src/components/css/checkout.css
+++ b/src/components/css/checkout.css
@@ -23,7 +23,6 @@
 
 .cartItemComments  {
     margin-top: 2px;
-    margin-bottom: 2px;
     color: #52a5ff ;
     font-size: 18px;
 }
@@ -37,7 +36,7 @@
     color: #8d90a1;
     font-size: 20px;
     margin-bottom: 10px;
-    margin-left: 120px;
+    float: right;
     display: inline;
 }
 
