--- a/src/components/css/checkout.css
+++ b/src/components/css/checkout.css
@@ -36,8 +36,6 @@
     color: #8d90a1;
     font-size: 20px;
     margin-bottom: 10px;
-    float: right;
-    display: inline;
 }
 
 .inner {
@@ -166,7 +164,7 @@
 .checkoutBut, .checkoutBut:hover, .checkoutBut:active {
     width: 90%;
     height: 50px;
-    margin-left: 10px;
+    position: center;
     margin-top: 12px;
     color: white;
     background-color: #52a5ff;
