--- a/src/components/css/index.css
+++ b/src/components/css/index.css
@@ -3,7 +3,7 @@
     left: 0;
     bottom: 0px;
     width: 100%;
-    height: 80px;
+    height: 75px;
     color: white;
     background-color:#303030;
     text-align: center;
@@ -43,7 +43,7 @@
 
 .navDiv {
     border-bottom: none;
-    border-top: none;
+    border-top-color: white;
 }
 
 .navInnerDiv {
@@ -70,7 +70,7 @@
 }
 
 .basketButton, .basketButton:hover, .basketButton:active {
-    height: 60px;
+    height: 52px;
     width: 90%;
     background-color: #52a5ff;
     border: 1px outset #52a5ff;
@@ -283,4 +283,17 @@ hr {
 .nav-items {
     overflow: auto;
     white-space: nowrap;
+}
+
+.paymentButton {
+    width: 45%;
+    height: 50px;
+    background-color: #52a5ff;
+    border: 1px outset #52a5ff;
+    font-weight: 700;
+    font-size: 18px;
+    margin-top: 10px;
+    margin-left: 10px;
+    bottom: 0;
+    position: center;
 }
