--- a/src/components/css/index.css
+++ b/src/components/css/index.css
@@ -15,13 +15,14 @@
     display: inline;
     position: relative;
     float: right;
-    margin-right: 10px;
+    margin-right: 15px;
 }
 
 .restaurantName {
     font-size: 25px;
     display: inline;
     font-weight: 500;
+    margin-left: 15px;
 }
 
 .headerDiv {
@@ -285,7 +286,7 @@ hr {
     white-space: nowrap;
 }
 
-.paymentButton {
+.paymentButton, .paymentButton:hover, .paymentButton:active {
     width: 55%;
     height: 50px;
     background-color: #52a5ff;
@@ -299,7 +300,7 @@ hr {
     float: right;
 }
 
-.viewBasketButton {
+.viewBasketButton, .viewBasketButton:hover, .viewBasketButton:active {
     width: 30%;
     height: 50px;
     background-color: #303030;
